[package]
name = "rust-u256"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
primitive-types = "0.13.1"
serde = { version = "1.0.216", features = ["derive"] }
sha256 = "1.5.0"
bitcoin = { version = "0.32.0", features = [ "serde", "base64" ], default-features = false }
uint = "0.10.0"
serde_json = "1.0.133"
